style.css
* {
  font-family: 'Montserrat';
}
html {
  scroll-behavior: auto !important;
}
body {
  background: linear-gradient(135deg, #152c8a, #021526);
  background-attachment: fixed;
  padding: 0;
  margin: 0;
  overflow-y: hidden;
}

.header_container {
  overflow: hidden;
  align-items: center;
  display: flex;
  justify-content: center;
  width: 100%;
  z-index: 100;
  top: 0;
  padding: 0;
}
.hover_bg_nav {
  position: absolute;
  background-color: #6EACDA;
  height: 40px;
  border-radius: 40px;
  top: 50%;
  transform: translateY(-50%);
  transition: all 0.5s ease;
  z-index: 0;
  pointer-events: none;
}
.nav_bar_container {
  position: relative;
  overflow: visible;
  z-index: 10;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 0px 0px 25px 25px;
  box-shadow: 0 4px 16px rgba(11, 19, 134, 0.37);
}

.nav_bar_container a {
  position: relative;
  text-decoration: none;
  color: #6EACDA;
  font-weight: bold;
  font-size: larger;
  z-index: 6;
  padding: 20px 15px;
  display: inline-block;
  margin: 0 10px;
  transition: color 0.3s ease-in-out;
}

.nav_bar_container a:hover {
  color: #E2E2B6;
  cursor: pointer;
}

.info_container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 200px;
  margin-top: 50px;
  text-align: center;
  color: #ffffff;
  padding: 20px;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  font-size: 1.5rem;
}
.highlight {
  color: #bac3f7;
  font-weight: bolder;
}

#dynamic-text { 
  font-weight: bolder;
  width: 280px;
  text-align: center;
  display: inline-block;
  transition: opacity 0.3s ease, transform 0.3s ease;
}
#doodles_container {
  z-index: -1;
}
#doodle_css {
  position: absolute;
  top: -150px;
  left: 15%;
  width: 150px;
  height: 150px;
  z-index: -1;
  animation: moveUpDown 5s infinite alternate;
  rotate: 30deg;
  -webkit-user-drag: none;
}
#doodle_html {
  position: absolute;
  top: -100px;
  left: 70%;
  width: 150px;
  height: 150px;
  z-index: -1;
  animation: moveUpDown 6s infinite alternate;
  rotate: -20deg;
  -webkit-user-drag: none;
}
#doodle_js {
  position: absolute;
  top: -30px;
  left: 35%;
  width: 175px;
  height: 175px;
  z-index: -1;
  rotate: 5deg;
  animation: moveUpDown 3.5s infinite alternate;
  -webkit-user-drag: none;
}
#doodle_basketbal {
  position: absolute;
  top: -400px;
  left: 70%;
  width: 200px;
  height: 200px;
  z-index: -100;
  animation: moveUpDown 3s infinite alternate;
  -webkit-user-drag: none;
}
#doodle_naam {
  position: absolute;
  top: -50px;
  left: 48%;
  width: 360px;
  height: 160px;
  z-index: -1;
  rotate: -10deg;
  animation: moveUpDown 4s infinite alternate;
  -webkit-user-drag: none;
}
#doodle_computer {
  position: absolute;
  top: -50px;
  left: 23%;
  width: 200px;
  height: 200px;
  z-index: -1;
  rotate: 10deg;
  animation: moveUpDown 3s infinite alternate;
  -webkit-user-drag: none;
}
#doodle_dino {
  position: absolute;
  top: -400px;
  left: 21%;
  width: 100px;
  height: 100px;
  z-index: -1;
  rotate: 10deg;
  animation: moveUpDown 2s infinite alternate;
  -webkit-user-drag: none;
}
@keyframes moveUpDown {
  0% {
    margin-top: 130px;
  }
  50% {
    margin-top: 80px;
  }
  100% {
    margin-top: 130px;
  }
}

.programingLan_container {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
  padding: 40px 0;
  max-width: 1000px;
  margin: 0 auto;
  margin-top: 250px;
  justify-content: center;
}
.programingLan_container h1 {
  color: #ffffff;
  font-size: 2rem;
  text-align: center;
  margin-bottom: 20px;
  width: 100%;
}
.programingLan_container div {
  display: flex;
  height: 60px;
  padding-left: 10px;
  padding-right: 10px;
  align-items: center;
  text-align: left;
  flex-direction: row;
}

#js,
#html,
#css,
#nodejs,
#discordjs,
#figma {
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 8px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  width: 300px;
  display: flex;
  align-items: center;
  padding-left: 10px;
  transition: all 0.8s ease-in-out;
}

#js:hover,
#html:hover,
#css:hover,
#nodejs:hover,
#discordjs:hover,
#figma:hover {
  transform: scale(1.05);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
  cursor: pointer;
}

#html_text,
#js_text,
#css_text,
#nodejs_text,
#discordjs_text,
#figma_text {
  display: inline-block;
  flex-direction: column;
  color: #ffffff;
  font-size: xx-small;
  text-align: left;
}

#html_text h1,
#js_text h1,
#css_text h1,
#nodejs_text h1,
#discordjs_text h1,
#figma_text h1 {
  font-size: 0.85rem;
  color: #ffffff;
  font-weight: 600;
  margin: 0;
  margin-top: 5px;
  padding: 0;
  font-size: 1.4rem;
  text-align: left;
}
#html_text p,
#js_text p,
#css_text p,
#nodejs_text p,
#discordjs_text p,
#figma_text p {
  font-size: 0.85rem;
  color: #ffffff;
  font-weight: 600;
  margin: 0;
  margin-top: 2px;
  padding: 0;
  font-size: 0.8rem;
  text-align: left;
}
.programingLan_container img {
  width: 28px;
  height: 28px;
  filter: brightness(0.9);
  margin-right: 8px;
}

.fade-in {
  opacity: 0;
  transform: translateY(-50px);
  transition: opacity 1s ease-out, transform 1s ease-out;
}

.fade-in.show {
  opacity: 1;
  transform: translateY(0);
}
.highlight {
  color: #bac3f7;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(186, 195, 247, 0.7);
}
.highlight-blue {
  color: #42C2FF;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(66, 194, 255, 0.7);
}

.highlight-dark-blue {
  color: #1E96FC;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(30, 150, 252, 0.7);
}

.highlight-light-blue {
  color: #5ADBFF;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(90, 219, 255, 0.7);
}
.projects_container {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
  padding: 40px 0;
  max-width: 1000px;
  margin: 0 auto;
  justify-content: center;
}
.projects_container h1 {
  color: #ffffff;
  font-size: 2rem;
  text-align: center;
  margin-bottom: 20px;
  width: 100%;
}
.project {
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 8px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  width: 300px;
  height: 400px;
  display: flex;
  flex-direction: column;
  padding-left: 10px;
  padding-right: 10px;
  color: #fff;
  transition: all 0.8s ease-in-out;
}
.project:hover {
  cursor: pointer;
  transform: scale(1.05);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
  cursor: pointer;
}
.project img {
  width: 100%;
  height: 150px;
  border-radius: 8px 8px 0 0;
}
.work_container {
  display: flex;
  flex-direction: column;
  gap: 15px;
  padding: 40px 0;
  max-width: 1000px;
  margin: 0 auto;
  text-align: center;
}

.work_container h1 {
  color: #ffffff;
  font-size: 2rem;
  text-align: center;
  margin-bottom: 20px;
}

#job_container_student {
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 8px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  padding: 20px;
  color: #fff;
  text-align: left;
  transition: all 0.8s ease-in-out;
}
#job_container_student:hover {
  transform: scale(1.02);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
  cursor: pointer;
}
#job_container_student h2 {
  font-size: 1.5rem;
  color: #42C2FF;
  margin-bottom: 5px;
}

#job_container_student h3 {
  font-size: 1.1rem;
  color: #bac3f7;
  margin-bottom: 5px;
}

#job_period {
  font-size: 0.9rem;
  color: #e2e2b6;
  margin-bottom: 10px;
}

#job_description {
  font-size: 1rem;
  color: #ffffff;
  line-height: 1.5;
}
.about_container {
  display: flex;
  max-width: 1000px;
  text-align: left;
  margin: 0 auto;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 8px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  overflow: hidden;
  transition: all 0.8s ease-in-out;
}
.about_container:hover {
  cursor: pointer;
  transform: scale(1.02);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
}
#about_container_img {
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1 1 50%;
}

#about_container_img img {
  max-width: 100%;
  height: auto;
  -webkit-user-drag: none;
}
#about_container_text {
  padding: 20px;
  font-size: 1.2rem;
  display: flex;
  flex-direction: column;
  text-align: left;
  color: white;
  flex: 1 1 50%;
}

.footer_container {
  display: flex;
  flex-direction: flex-end;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 25px 25px 0px 0px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  margin: 0 auto;
  color: white;
  max-width: 1000px;
  margin-top: 50px;
  font-size: 0.8rem;
}
#footer_copyright {
  padding: 20px;
}
#socials_footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}
#socials_footer img {
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  background-color: rgba(255, 255, 255, 0.1);
  padding: 10px;
  border-radius: 25px;
  transition: 0.6s ease-in-out;
  margin-left: 10px;
  width: 25px;
  height: 25px;
  -webkit-user-drag: none;
} 
#socials_footer img:hover {
  transform: scale(1.1);
  cursor: pointer;
}

@media (max-width: 768px) {
  .about_container {
    flex-direction: column;
    max-width: 100%;
  }
  
  #about_container_img, 
  #about_container_text {
    flex: 1 1 auto; 
    width: 100%; 
  }
  #doodles_container {
    display: none;
  }
}
@media (max-width: 1024px) {
  #doodles_container {
    display: none;
  }
}
@media (max-width: 1050px) {
  #doodle_basketbal {
    position: absolute;
    top: -450px;
    left: 10%;
    width: 200px;
    height: 200px;
    z-index: -100;
    animation: moveUpDown 3s infinite alternate;
    -webkit-user-drag: none;
  }
}
@media (max-width: 1770px) {
  #doodle_css {
    position: absolute;
    top: -150px;
    left: 10%;
    width: 150px;
    height: 150px;
    z-index: -1;
    animation: moveUpDown 5s infinite alternate;
    rotate: 30deg;
    -webkit-user-drag: none;
  }
  #doodle_html {
    position: absolute;
    top: -100px;
    left: 80%;
    width: 150px;
    height: 150px;
    z-index: -1;
    animation: moveUpDown 6s infinite alternate;
    rotate: -20deg;
    -webkit-user-drag: none;
  }
  #doodle_basketbal {
    position: absolute;
    top: -400px;
    left: 80%;
    width: 200px;
    height: 200px;
    z-index: -100;
    animation: moveUpDown 3s infinite alternate;
    -webkit-user-drag: none;
  }
  #doodle_dino {
    position: absolute;
    top: -400px;
    left: 15%;
    width: 100px;
    height: 100px;
    z-index: -1;
    rotate: 10deg;
    animation: moveUpDown 2s infinite alternate;
    -webkit-user-drag: none;
  }
}

@media (max-width: 425px) {
  .info_container {
    font-size: 1rem;
  }
  #dynamic-text {
    width: 200px;
  } 
  .footer_container {
    font-size: 0.6rem;
  }
}

